# ffsuckpeg

./: CMakeLists.txt  readme.md
include/: convert.hpp  process.hpp
src/: convert.cpp  main.cpp  process.cpp
